--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -2162,8 +2162,25 @@
       "cell_type": "markdown",
       "source": [
         "## Conclusion\n",
-        "RNN and its kind are a great way to do sentiment analysis with minimum amount of workflow. This notebook uses preprocessed imdb data so in a real life use case, preprocessing steps need to be taken into account. This approach can be extended to other problems as well!"
+        "RNN and its kind are a great way to do sentiment analysis with minimum amount of workflow. This notebook uses preprocessed imdb data so in a real life use case, preprocessing steps need to be taken into account. This approach can be extended to other problems as well!\n",
+        "\n",
+        "\n",
+        "If you want to study these in more details, I would recommend the following link:\n",
+        "https://www.deeplearningbook.org/contents/rnn.html"
       ]
+    },
+    {
+      "metadata": {
+        "id": "VxPkViEi0VFa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
